Changed pickle Files

--- a/Python_Notebooks/Project_Medium.ipynb
+++ b/Python_Notebooks/Project_Medium.ipynb
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 531,
-   "id": "b6e2281c",
+   "id": "8364a7b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 617,
-   "id": "efe97778",
+   "id": "5097dc26",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 665,
-   "id": "8269c9b8",
+   "id": "c337b0cd",
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": 681,
-   "id": "dabe751e",
+   "id": "7841db65",
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1836,7 @@
   {
    "cell_type": "code",
    "execution_count": 682,
-   "id": "f77765f0",
+   "id": "b9b09eeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1848,7 +1848,7 @@
   {
    "cell_type": "code",
    "execution_count": 683,
-   "id": "1059e7d7",
+   "id": "946058d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1860,7 +1860,7 @@
   {
    "cell_type": "code",
    "execution_count": 684,
-   "id": "6ecd816a",
+   "id": "dc80af24",
    "metadata": {},
    "outputs": [
     {
@@ -1896,7 +1896,7 @@
   {
    "cell_type": "code",
    "execution_count": 685,
-   "id": "51190973",
+   "id": "29b336de",
    "metadata": {},
    "outputs": [
     {
@@ -2015,7 +2015,7 @@
   {
    "cell_type": "code",
    "execution_count": 686,
-   "id": "1917123a",
+   "id": "47500fc9",
    "metadata": {},
    "outputs": [
     {
@@ -2037,7 +2037,7 @@
   {
    "cell_type": "code",
    "execution_count": 687,
-   "id": "26b42d17",
+   "id": "afc15fef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2049,7 +2049,7 @@
   {
    "cell_type": "code",
    "execution_count": 688,
-   "id": "7ba85307",
+   "id": "dcb5f219",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2061,7 +2061,7 @@
   {
    "cell_type": "code",
    "execution_count": 689,
-   "id": "b9d1c8b1",
+   "id": "84ff7b74",
    "metadata": {},
    "outputs": [
     {
@@ -2290,7 +2290,7 @@
   {
    "cell_type": "code",
    "execution_count": 690,
-   "id": "3124fbc6",
+   "id": "30e91aba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2302,7 +2302,7 @@
   {
    "cell_type": "code",
    "execution_count": 691,
-   "id": "77a7f28b",
+   "id": "5615696c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2313,7 +2313,7 @@
   {
    "cell_type": "code",
    "execution_count": 692,
-   "id": "9913fa36",
+   "id": "de8b5a64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2324,7 +2324,7 @@
   {
    "cell_type": "code",
    "execution_count": 693,
-   "id": "c3c8b860",
+   "id": "72922c1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2334,7 +2334,7 @@
   {
    "cell_type": "code",
    "execution_count": 735,
-   "id": "f6dce3ff",
+   "id": "480a4859",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2347,7 +2347,7 @@
   {
    "cell_type": "code",
    "execution_count": 736,
-   "id": "0a82ba0c",
+   "id": "0d5246e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2360,7 +2360,7 @@
   {
    "cell_type": "code",
    "execution_count": 737,
-   "id": "8d46fdee",
+   "id": "b9febb5f",
    "metadata": {},
    "outputs": [
     {
@@ -2397,7 +2397,7 @@
   {
    "cell_type": "code",
    "execution_count": 738,
-   "id": "3f72a3ba",
+   "id": "80144a48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2409,7 +2409,7 @@
   {
    "cell_type": "code",
    "execution_count": 739,
-   "id": "348c86b4",
+   "id": "0dd79d4c",
    "metadata": {},
    "outputs": [
     {
@@ -2441,8 +2441,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 740,
-   "id": "69c191a8",
+   "execution_count": 755,
+   "id": "d735e865",
    "metadata": {},
    "outputs": [
     {
@@ -2484,14 +2484,14 @@
     "    rf_cv = GridSearchCV(rf, params, cv = time_series_split, n_jobs = -1, verbose = 20)\n",
     "    rf_cv.fit(X_train, Y_train.values.ravel())\n",
     "    \n",
-    "    file_loc = f'{os.getcwd()}\\\\Pickle_Files\\\\Cluster_{cluster_selected}'    \n",
+    "    file_loc = f'{os.getcwd()}\\\\Cluster_{cluster_selected}'    \n",
     "    pickle.dump(rf_cv, open(file_loc,'wb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 741,
-   "id": "9fe94aa1",
+   "execution_count": 756,
+   "id": "23f4de35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2501,8 +2501,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 742,
-   "id": "122167ee",
+   "execution_count": 757,
+   "id": "15ce8b35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2513,10 +2513,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 743,
-   "id": "07699ea4",
+   "execution_count": 758,
+   "id": "2854a171",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/Users/pulkitjindal/Desktop/Summers/CodeAlgo/Python_Notebooks\\\\Pickle_Files\\\\Cluster_0'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-758-279a038638c5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mpred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcluster_selected\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mclusters_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCluster\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mrf_cv\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetcwd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34mf'\\\\Pickle_Files\\\\Cluster_{cluster_selected}'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mbest_rf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrf_cv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_estimator_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mcluster_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mday_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mday_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSymbol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclusters_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mclusters_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCluster\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mcluster_selected\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Companies'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/pulkitjindal/Desktop/Summers/CodeAlgo/Python_Notebooks\\\\Pickle_Files\\\\Cluster_0'"
+     ]
+    }
+   ],
    "source": [
     "#Predict each stock using \n",
     "pred = pd.DataFrame()\n",
@@ -2534,125 +2546,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 744,
-   "id": "77c03f46",
+   "execution_count": 759,
+   "id": "6f66d4d6",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>company</th>\n",
-       "      <th>prediction</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2021-11-01</th>\n",
-       "      <td>2021-11-01</td>\n",
-       "      <td>HCLTECH.BO</td>\n",
-       "      <td>0.675220</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-11-01</th>\n",
-       "      <td>2021-11-01</td>\n",
-       "      <td>INDUSINDBK.BO</td>\n",
-       "      <td>0.675220</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-11-01</th>\n",
-       "      <td>2021-11-01</td>\n",
-       "      <td>BAJAJ-AUTO.BO</td>\n",
-       "      <td>0.634082</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-11-01</th>\n",
-       "      <td>2021-11-01</td>\n",
-       "      <td>INFY.BO</td>\n",
-       "      <td>0.603333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-11-01</th>\n",
-       "      <td>2021-11-01</td>\n",
-       "      <td>HDFCBANK.BO</td>\n",
-       "      <td>0.603333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-11-01</th>\n",
-       "      <td>2021-11-01</td>\n",
-       "      <td>BAJFINANCE.BO</td>\n",
-       "      <td>0.591539</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-11-01</th>\n",
-       "      <td>2021-11-01</td>\n",
-       "      <td>NTPC.BO</td>\n",
-       "      <td>0.564725</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-11-01</th>\n",
-       "      <td>2021-11-01</td>\n",
-       "      <td>ONGC.BO</td>\n",
-       "      <td>0.564725</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-11-01</th>\n",
-       "      <td>2021-11-01</td>\n",
-       "      <td>AXISBANK.BO</td>\n",
-       "      <td>0.553188</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-11-01</th>\n",
-       "      <td>2021-11-01</td>\n",
-       "      <td>HDFC.BO</td>\n",
-       "      <td>0.544994</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Date        company  prediction\n",
-       "Date                                            \n",
-       "2021-11-01 2021-11-01     HCLTECH.BO    0.675220\n",
-       "2021-11-01 2021-11-01  INDUSINDBK.BO    0.675220\n",
-       "2021-11-01 2021-11-01  BAJAJ-AUTO.BO    0.634082\n",
-       "2021-11-01 2021-11-01        INFY.BO    0.603333\n",
-       "2021-11-01 2021-11-01    HDFCBANK.BO    0.603333\n",
-       "2021-11-01 2021-11-01  BAJFINANCE.BO    0.591539\n",
-       "2021-11-01 2021-11-01        NTPC.BO    0.564725\n",
-       "2021-11-01 2021-11-01        ONGC.BO    0.564725\n",
-       "2021-11-01 2021-11-01    AXISBANK.BO    0.553188\n",
-       "2021-11-01 2021-11-01        HDFC.BO    0.544994"
-      ]
-     },
-     "execution_count": 744,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'prediction'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-759-a3f93713dea5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtop_10_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpred\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'prediction'\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mascending\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtop_10_pred\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/miniconda3/lib/python3.9/site-packages/pandas/util/_decorators.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    309\u001b[0m                     \u001b[0mstacklevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstacklevel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    310\u001b[0m                 )\n\u001b[0;32m--> 311\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    312\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    313\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/miniconda3/lib/python3.9/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36msort_values\u001b[0;34m(self, by, axis, ascending, inplace, kind, na_position, ignore_index, key)\u001b[0m\n\u001b[1;32m   6311\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6312\u001b[0m             \u001b[0mby\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mby\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 6313\u001b[0;31m             \u001b[0mk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_label_or_level_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mby\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   6314\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6315\u001b[0m             \u001b[0;31m# need to rewrap column in Series to apply key function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/miniconda3/lib/python3.9/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m_get_label_or_level_values\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1838\u001b[0m             \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maxes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_level_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1839\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1840\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1841\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1842\u001b[0m         \u001b[0;31m# Check for duplicates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'prediction'"
+     ]
     }
    ],
    "source": [
@@ -2662,8 +2572,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 745,
-   "id": "d9d5de1f",
+   "execution_count": 760,
+   "id": "c5346e12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2680,8 +2590,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 746,
-   "id": "52fa7ec6",
+   "execution_count": 761,
+   "id": "3122e985",
    "metadata": {},
    "outputs": [
     {
@@ -2918,7 +2828,7 @@
        "2021-01-14  -41.000000  "
       ]
      },
-     "execution_count": 746,
+     "execution_count": 761,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2930,7 +2840,7 @@
   {
    "cell_type": "code",
    "execution_count": 748,
-   "id": "68a0cc1f",
+   "id": "c6f79eb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2940,7 +2850,7 @@
   {
    "cell_type": "code",
    "execution_count": 749,
-   "id": "acd9a063",
+   "id": "623d14ec",
    "metadata": {},
    "outputs": [
     {
@@ -2960,8 +2870,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 750,
+   "id": "1a0ffdaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/pulkitjindal/Desktop/Summers/CodeAlgo/Python_Notebooks\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "056a43c3",
+   "id": "0f719f01",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2969,7 +2895,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb763f2d",
+   "id": "b1854f55",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2977,15 +2903,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d0ade8a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "59e9bc50",
+   "id": "22a48244",
    "metadata": {},
    "outputs": [],
    "source": []
